# ai_pair_programming_hackathon

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
copilot/: 1_fitness_instructions.py  2_cooking.py
openai_hackathon/1_copilot/: 1_fitness_instructions.py
openai_hackathon/1_copilot/1_from_spec/: 1_fitness_instructions.py  2_cooking.py
openai_hackathon/1_copilot/2_testing/: 1_test_fitness_instructions.py  2_test_cooking.py
openai_hackathon/1_copilot/3_exploring/: create_data.py  new_computing_library.py  new_library.py  new_testing_library.py  trade.csv
openai_hackathon/2_chat_gpt/1_bug_hunting/: 1_help_bobby.py  2_broken_references.py  2_broken_references_GPT.py  bug_hunting.md
openai_hackathon/2_chat_gpt/2_optimization/: 1_convolution.py  optimization.md
openai_hackathon/2_chat_gpt/bug_hunting/: help_bobby.py
openai_hackathon/2_chat_gpt/optimization/: convolution.py
openai_hackathon/copilot/: 1_fitness_instructions.py
openai_hackathon/copilot/testing/: 1_test_fitness_instructions.py  2_test_cooking.py
openai_hackathon/gpt/bug_hunting/: bug_hunting.md
